# linux-app-deployer

./: .env.example  .gitignore  API-END-POINTS.md  README.md  api.py  api_config.py  config.py  logging_config.py  main.py  mcp-deployer.service  pyproject.toml  requirements.txt  server.py
prod-deployment-scripts/: deploy.famvest.online  linux-app-deployer-api.service  mcp-linux-app-deployer.service  mcp.famvest.online  nginx.conf.api-keys.example
prompts/: prompts.py
resources/: resources.py
tools/: linux_app_deployer.py  tools_api.py
